Quiz with file that stores the uncompleted quizzes.